fix bug on mobile

--- a/src/components/AnimatedHeading/AnimatedHeading.module.css
+++ b/src/components/AnimatedHeading/AnimatedHeading.module.css
@@ -97,5 +97,6 @@
   .layer3 {
     font-size: 2rem;
     letter-spacing: 10px;
+    height: 5rem;
   }
 }
